crates/nash-can/src/snapshots/nash_can__module__tests__validator_missing_main.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nvalidator module Foo exposing (main)\n\nx = 1\n"
info: diagnostic
---
nash::validator::missing_main

  × This validator module requires a main value to compile into a script.
   ╭─[src/Foo.nash:1:1]
 1 │ validator module Foo exposing (main)
   · ─────────
 2 │ 
   ╰────
  help: Add a main value, or remove the validator keyword from the module header.
