crates/nash-can/src/snapshots/nash_can__module__tests__validator_module_kind_is_preserved.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nvalidator module Main exposing (..)\n\nmain = 1\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Validator(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 10,
            },
        },
    ),
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 32,
            },
            end: Position {
                line: 1,
                column: 36,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 5,
                    },
                },
                value: "main",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 8,
                    },
                    end: Position {
                        line: 3,
                        column: 9,
                    },
                },
                value: Int(
                    1,
                ),
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
